--- a/SistemadePartidas/src/vista/FrmMenu.form
+++ b/SistemadePartidas/src/vista/FrmMenu.form
@@ -112,6 +112,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Gestionar Libros"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem5ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -133,6 +136,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Nueva Partida"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem6ActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem7">
               <Properties>
