--- a/SistemadePartidas/src/vista/JInternalFrameAgregarLibro.form
+++ b/SistemadePartidas/src/vista/JInternalFrameAgregarLibro.form
@@ -50,7 +50,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="33" green="33" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="A&#xf1;o/Libro:"/>
+        <Property name="text" type="java.lang.String" value="A&#xd1;O/LIBRO:"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -99,7 +99,7 @@
     <Component class="javax.swing.JLabel" name="jLabel_wallpaper">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/img/wall.png"/>
+          <Image iconType="3" name="/img/wall_Nuevo_Libro.png"/>
         </Property>
       </Properties>
       <Constraints>
