--- a/SistemadePartidas/src/vista/JInternalFrameAgregarPartida.form
+++ b/SistemadePartidas/src/vista/JInternalFrameAgregarPartida.form
@@ -294,7 +294,7 @@
     <Component class="javax.swing.JButton" name="btn_Guardar">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="cc" red="0" type="rgb"/>
+          <Color blue="0" green="99" red="0" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -312,7 +312,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="280" y="300" width="-1" height="-1"/>
+          <AbsoluteConstraints x="270" y="300" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
