Modificar en cuanto a funcionalidad requerida
El usuario manifestó cambiar el dato de DNI por "N° de partida", además se agregó otro comboBox para el Tipo de Partida que pueden ser(Nacimiento, Fallecimiento , Matrimonio)

--- a/SistemadePartidas/src/vista/FrmMenu.form
+++ b/SistemadePartidas/src/vista/FrmMenu.form
@@ -175,26 +175,8 @@
               <Dimension value="[150, 50]"/>
             </Property>
           </Properties>
-          <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem8">
-              <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/report_book.png"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Reporte Libros"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem9">
-              <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/report_folder.png"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Reporte Partidas"/>
-              </Properties>
-            </MenuItem>
-          </SubComponents>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="jMenu9">
+        <Menu class="javax.swing.JMenu" name="btn_salir">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="cc" red="ff" type="rgb"/>
@@ -207,6 +189,10 @@
               <Dimension value="[150, 50]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_salirMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_salirActionPerformed"/>
+          </Events>
         </Menu>
       </SubComponents>
     </Menu>
